<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".sanbot.client.SanbotClientActivity">

    <ImageView
        android:id="@+id/sb_c_iv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/image1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/sb_c_btn_conn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="连接"/>
            <Button
                android:id="@+id/sb_c_btn_destroy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="断开"/>
        </LinearLayout>
        <Button
            android:id="@+id/sb_c_btn_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb_up"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/sb_c_btn_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/sb_left" />
            <Button
                android:id="@+id/sb_c_btn_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sb_right"
                android:layout_margin="30dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/sb_c_btn_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sb_down"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/sb_c_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"/>
        <Button
            android:id="@+id/sb_c_btn_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sb_send"/>
    </LinearLayout>
</LinearLayout>