<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="0,1">
            <TableRow>
                <Button
                    android:id="@+id/app_value_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_value_btn"/>

                <Button
                    android:id="@+id/copy_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/copy_btn"/>

            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/self_copy_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/self_copy_btn"/>
                <Button
                    android:id="@+id/get_self_copy_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_self_copy_btn"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/jump_intent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jump_intent"/>
                <Button
                    android:id="@+id/main_btn_at"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Async_Task"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_hp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Handler_Post"/>
                <Button
                    android:id="@+id/main_btn_hm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Handler_Message"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_lp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Looper"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_br"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Broadcast"/>
                <Button
                    android:id="@+id/main_btn_upd_br"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="UDP search"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_sk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Socket"/>
                <Button
                    android:id="@+id/main_btn_sv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Service"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_cam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Camera"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_vdSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Video_Send"/>
                <Button
                    android:id="@+id/main_btn_vdRec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Video_Rec"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_vd3Send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Video3_Send"/>
                <Button
                    android:id="@+id/main_btn_vd3Rec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Video3_Rec"/>
            </TableRow>
            <TableRow>
                <Button
                    android:id="@+id/main_btn_sbServer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="sanbot_server"/>
                <Button
                    android:id="@+id/main_btn_sbClient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="sanbot_client"/>
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>